k8s/ping-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ping
  labels:
    app: ping
