k8s/ping-pong-ms-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ping-pong-ms
  labels:
    app: ping-pong
    tier: backend
spec:
  selector:
    matchLabels:      
      app: ping-pong
      tier: backend
  replicas: 2
  template:
    metadata:
      name: ping-pong-ms
      labels:
        app: ping-pong
        tier: backend
    spec:
      containers:
        - name: ping-pong-ms
          image: kipu23/ping-pong-ms
