k8s/ping-ms.yaml
apiVersion: v1
kind: Service
metadata:
  name: ping-ms
  namespace: ping
  labels:
    app: ping
    tier: backend
spec:
  type: ClusterIP
  selector:
    app: ping
    tier: backend
  ports:
    - port: 80
      targetPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ping-ms
  namespace: ping
  labels:
    app: ping
    tier: backend
spec:
  selector:
    matchLabels:      
      app: ping
      tier: backend
  replicas: 2
  template:
    metadata:
      name: ping-ms
      labels:
        app: ping
        tier: backend
    spec:
      containers:
        - name: ping-ms
          image: kipu23/ping-ms:1.0.5
          imagePullPolicy: Always
          volumeMounts:
            - name: podinfo
              mountPath: /etc/podinfo
      volumes:
        - name: podinfo
          downwardAPI:
            items:
              - path: "namespace"
                fieldRef:
                  fieldPath: metadata.namespace
              - path: "labels"
                fieldRef:
                  fieldPath: metadata.labels
              - path: "name"
                fieldRef:
                  fieldPath: metadata.name
              - path: "uid"
                fieldRef:
                  fieldPath: metadata.uid
