k8s/ping-pong-mongo-service-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: ping-pong-mongo-nodeport
  labels:
    app: ping-pong
    tier: database
spec:
  type: NodePort
  selector:
    app: ping-pong
    tier: database
  ports:
    - port: 27017
      targetPort: 27017
      nodePort: 30901
