k8s/ping-pong-mongo.yaml
apiVersion: v1
kind: Service
metadata:
  name: ping-pong-mongo
  labels:
    app: ping-pong
    tier: database
spec:
  type: ClusterIP
  selector:
    app: ping-pong
    tier: database
  ports:
    - port: 27017
      targetPort: 27017
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: ping-pong-mongo
  labels:
    app: ping-pong
    tier: database
spec:
  serviceName: ping-pong-mongo
  replicas: 1
  selector:
    matchLabels:
      app: ping-pong
      tier: database
  template:
    metadata:
      labels:
        app: ping-pong
        tier: database
    spec:
      containers:
      - name: ping-pong-mongo
        image: mongo:5.0.3
        volumeMounts:
        - name: init-script
          mountPath: /docker-entrypoint-initdb.d
          readOnly: true
      volumes:
        - name: init-script
          configMap:
            name: ping-pong-mongo-init
            items:
            - key: mongo-init.js
              path: mongo-init.js
