k8s/ping-pong-ms.yaml
apiVersion: v1
kind: Service
metadata:
  name: ping-pong-ms
  namespace: ping-pong
  labels:
    app: ping-pong
    tier: backend
spec:
  type: ClusterIP
  selector:
    app: ping-pong
    tier: backend
  ports:
    - port: 80
      targetPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ping-pong-ms
  namespace: ping-pong
  labels:
    app: ping-pong
    tier: backend
spec:
  selector:
    matchLabels:      
      app: ping-pong
      tier: backend
  replicas: 2
  template:
    metadata:
      name: ping-pong-ms
      labels:
        app: ping-pong
        tier: backend
    spec:
      containers:
        - name: ping-pong-ms
          image: kipu23/ping-pong-ms:1.0.1
