k8s/ping-pong-ui-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ping-pong-ui
  labels:
    app: ping-pong
    tier: frontend
spec:
  type: ClusterIP
  selector:
    app: ping-pong
    tier: frontend
  ports:
    - port: 80
      targetPort: 80
