k8s/ping-ui.yaml
apiVersion: v1
kind: Service
metadata:
  name: ping-ui
  namespace: ping
  labels:
    app: ping
    tier: frontend
spec:
  type: ClusterIP
  selector:
    app: ping
    tier: frontend
  ports:
    - port: 80
      targetPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ping-ui
  namespace: ping
  labels:
    app: ping
    tier: frontend
spec:
  selector:
    matchLabels:
      app: ping
      tier: frontend
  replicas: 2
  template:
    metadata:
      name: ping-ui
      labels:
        app: ping
        tier: frontend
    spec:
      containers:
        - name: ping-ui
          image: kipu23/ping-ui:1.0.0
          volumeMounts:
            - name: config
              mountPath: /usr/share/nginx/html/assets/environments/environment.json
              subPath: environment.json
      volumes:
        - name: config
          configMap:
            name: ping-ui-config
