k8s/ping-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ping-ingress
  namespace: ping
  labels:
    app: ping
  annotations:
    kubernetes.io/ingress.class: addon-http-application-routing
spec:
  rules:
  - host: 8fc072c0923e49668fbc.westeurope.aksapp.io
    http:
      paths:
      - path: /api/ping
        pathType: Prefix
        backend:
          service:
            name: ping-ms
            port:
              number: 80
  - host: ping.8fc072c0923e49668fbc.westeurope.aksapp.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: ping-ui
            port:
              number: 80
